# cerberus-mcp-governance-gateway

./: .gitignore  README.md
cerberus/: .dockerignore  .pylintrc  env.example  pyproject.toml  requirements-prod.txt  requirements.txt
cerberus/alembic/: env.py
cerberus/alembic/versions/: 7ec179615239_initial_schema.py
cerberus/app/: __init__.py  main.py
cerberus/app/cache/: __init__.py  policy_cache.py  rate_limit_store.py  redis_client.py
cerberus/app/config/: __init__.py  constants.py  settings.py
cerberus/app/control_plane/: __init__.py
cerberus/app/core/: __init__.py  exceptions.py  logging.py  security.py  utils.py
cerberus/app/db/: __init__.py  migrations.py  session.py
cerberus/app/governance_plane/: __init__.py
cerberus/app/middleware/: __init__.py  error_handler.py  logging.py
cerberus/app/models/: __init__.py  agent_access.py  audit_log.py  base.py  guardrail.py  mcp_server_workspace.py  organisation.py  policy.py  user.py
cerberus/app/schemas/: __init__.py  agent_access.py  auth.py  common.py  decision.py  guardrail.py  mcp_server_workspace.py  organisation.py  policy.py  proxy.py  user.py
cerberus/docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
cerberus/docs/: README.md  api-reference.md  architecture.md  authentication.md  deployment.md  getting-started.md  guardrails.md  migrations.md
cerberus/env/: local.env  prod.env.example  stage.env.example
cerberus/infra/bootstrap/: main.tf  outputs.tf  variables.tf
cerberus/infra/scripts/: bootstrap.sh  deploy-prod.sh  deploy-stage.sh  destroy-prod.sh  (+1 more)
cerberus/scripts/: __init__.py  seed_db.py
cerberus/tests/: __init__.py  conftest.py
(+105 files in other folders)
